Aded the Logistic Regression CV training

--- a/pimaIndianDiabetesPrediction.ipynb
+++ b/pimaIndianDiabetesPrediction.ipynb
@@ -1953,6 +1953,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LogisticRegressionCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegressionCV(Cs=3, class_weight='balanced', cv=10, dual=False,\n",
+       "           fit_intercept=True, intercept_scaling=1.0, max_iter=100,\n",
+       "           multi_class='ovr', n_jobs=-1, penalty='l2', random_state=42,\n",
+       "           refit=True, scoring=None, solver='lbfgs', tol=0.0001, verbose=0)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegressionCV\n",
+    "lr_cv_model = LogisticRegressionCV(n_jobs=-1, random_state=42, Cs=3, cv=10, refit=True, class_weight=\"balanced\")\n",
+    "lr_cv_model.fit(xTrain, yTrain.ravel())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predict Test Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acuracy: 0.7013\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr_cv_predict_test = lr_cv_model.predict(xTest)\n",
+    "print(\"Acuracy: {0:.4f}\".format(metrics.accuracy_score(yTest, lr_cv_predict_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 53  27]\n",
+      " [ 42 109]]\n",
+      "\n",
+      "Classification Report\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          1       0.56      0.66      0.61        80\n",
+      "          0       0.80      0.72      0.76       151\n",
+      "\n",
+      "avg / total       0.72      0.70      0.71       231\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"{0}\\n\".format(metrics.confusion_matrix(yTest, lr_cv_predict_test, labels=[1,0])))\n",
+    "print(\"Classification Report\")\n",
+    "print(\"{0}\\n\".format(metrics.classification_report(yTest, lr_cv_predict_test, labels=[1,0])))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
